feat: add email service & PUT endpoint for user password
