# src/main/resources/static/openapi.yml
@@ -293,6 +293,46 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponseDTO'
+  /api/v1/user/password:
+    put:
+      tags:
+        - UserController
+      summary: Update user's password by ID
+      description: >
+        Updates the password of an existing user identified by their ID.  
+        A new password is automatically generated by the system.
+      operationId: updateUsersPasswordById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The unique identifier of the user whose password is being updated.
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: OK - User's password updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponseDTO'
+        '401':
+          description: "Unauthorised - Unauthenticated: Authentication is required to access this resource."
+        '403':
+          description: "Forbidden - Access denied: You do not have permission to perform this action."
+        '404':
+          description: Not Found - User not found.
+        '405':
+          description: Method Not Allowed - Incorrect HTTP method used.
+        '409':
+          description: Conflict - The request could not be processed due to data integrity rules violation.
+        default:
+          description: Unexpected error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDTO'
   /api/v1/student:
     get:
       tags:
@@ -983,39 +1023,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponseDTO'
-  /api/v1/user-exercise/current:
-    get:
-      tags:
-        - UserExerciseController
-      summary: Retrieve a list of exercises for the currently logged-in user
-      description: >
-        This endpoint returns all exercises assigned to the currently authenticated user.
-
-        Each item includes the exercise ID, day of the session, and start time.
-
-        - No parameters are required.
-      operationId: getCurrentUserExercises
-      responses:
-        '200':
-          description: OK - List of exercises returned.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ExerciseSummaryResponseDTO'
-        '401':
-          description: "Unauthorised - Authentication is required to access this resource."
-        '403':
-          description: "Forbidden - Access denied: You do not have permission to perform this action."
-        '405':
-          description: Method Not Allowed - Incorrect HTTP method used.
-        default:
-          description: Unexpected error.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponseDTO'
   /api/v1/user-exercise:
     get:
       tags:
@@ -1182,6 +1189,39 @@ paths:
           description: Method Not Allowed - Incorrect HTTP method used.
         '409':
           description: Conflict - The request could not be processed due to data integrity rules violation.
+        default:
+          description: Unexpected error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDTO'
+  /api/v1/user-exercise/current:
+    get:
+      tags:
+        - UserExerciseController
+      summary: Retrieve a list of exercises for the currently logged-in user
+      description: >
+        This endpoint returns all exercises assigned to the currently authenticated user.
+
+        Each item includes the exercise ID, day of the session, and start time.
+
+        - No parameters are required.
+      operationId: getCurrentUserExercises
+      responses:
+        '200':
+          description: OK - List of exercises returned.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ExerciseSummaryResponseDTO'
+        '401':
+          description: "Unauthorised - Authentication is required to access this resource."
+        '403':
+          description: "Forbidden - Access denied: You do not have permission to perform this action."
+        '405':
+          description: Method Not Allowed - Incorrect HTTP method used.
         default:
           description: Unexpected error.
           content:
@@ -2002,7 +2042,6 @@ components:
       required:
         - fullName
         - email
-        - password
         - roleEnum
       properties:
         fullName:
@@ -2012,9 +2051,6 @@ components:
           type: string
           format: email
           description: The user's email address.
-        password:
-          type: string
-          description: The user's password.
         roleEnum:
           type: string
           enum: [ ADMIN, TEACHER, HELPER ]
